--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
         <table id="myTable" class="table table-hover tab">
           <thead>
             <tr class="table-dark">
-              <th>fullname</th>
-              <th id="age">age</th>
-              <th>address</th>
+              <th>Full Name</th>
+              <th id="age">Age</th>
+              <th id="address">Address</th>
             </tr>
           </thead>
           <tbody id="data-output"></tbody>
         </table>
-        <button class="btn btn-outline-dark" id="last">Sort by age</button>
-        <button class="btn btn-outline-dark" id="first">Sort by name</button>
-        <input class="btn btn-dark" id="reset" type="reset" value="Reset" />
+        <button class="btn btn-outline-dark" id="highlight">
+          Highlight age over 30
+        </button>
+        <button class="btn btn-outline-dark" id="sort">
+          Sort by last-name
+        </button>
       </div>
     </div>
     <div id="form">
@@ -66,45 +69,9 @@
             />
           </div>
           <button id="submit" type="submit" class="btn btn-dark">Submit</button>
+          <input class="btn btn-dark" id="reset" type="reset" value="Reset" />
         </form>
       </div>
     </div>
-    <!-- <table id="table" border="1">
-      <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Age</th>
-      </tr>
-
-      <tr>
-        <td>FN1</td>
-        <td>LN1</td>
-        <td>10</td>
-      </tr>
-
-      <tr>
-        <td>FN2</td>
-        <td>LN2</td>
-        <td>20</td>
-      </tr>
-
-      <tr>
-        <td>FN3</td>
-        <td class="selected">LN3</td>
-        <td>30</td>
-      </tr>
-
-      <tr>
-        <td>FN4</td>
-        <td>LN4</td>
-        <td>40</td>
-      </tr>
-
-      <tr>
-        <td>FN5</td>
-        <td>LN5</td>
-        <td>50</td>
-      </tr>
-    </table> -->
   </body>
 </html>
